# TimeTrackerPy

./: LICENSE  pyproject.toml
.github/workflows/: python-app.yml
fish/functions/: track_prompt.fish
src/timetracker/: __main__.py  api.py  cli.py  config.py  tables.py  time.py
src/timetracker/worklog/: coder.py  data.py  error.py  io.py  transaction.py
tests/: api_test.py  constants.py  fixtures.py  tables_test.py  time_test.py  worklog_test.py
