[project]
name = "TimeTracker"
version = "0.1.0"
description = "A command line utility to track time spent on tasks"
authors = [
    {name = "Jonas Greitemann", email = "jgreitemann@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "dataclasses-json>=0.6.4",
    "click-help-colors>=0.9.4",
    "httpx>=0.27.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
track = "timetracker.cli:cli_with_error_reporting"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.scripts]
test = "ward"


[tool.pdm.dev-dependencies]
dev = [
    "ward>=0.68.0b0",
    "pyfakefs>=5.4.0",
    "respx>=0.21.1",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
# Partially unknown types should not be flagged, only missing ones
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
# The following lints are disabled because they are covered by ruff
reportUnusedVariable = "none"
reportUnusedImport = "none"
